[tool.poetry]
name = "graphs-are-awesome"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"
packages = [{include = "graphs_are_awesome"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.2.7"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.6.0"
mkdocs-macros-plugin = "^1.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -s -x --cov=graph -vv"
